# testplatform

./: .dockerignore  .env_example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule.db  conftest.py  docker-compose-prod.yaml  docker-compose.yaml  entrypoint.sh  entrypoint_scheduler.sh  entrypoint_worker.sh  manage.py  pre-commit-autofix.yaml  project.toml  pyproject.toml  pytest.ini  requirements.txt  udo journalctl -u gunicorn -p err --since 1 hour ago
analyticalplatform/: asgi.py  celery.py  gitlab.py  integrations.py  settings.py  urls.py  wsgi.py
api_requests/: moy_sklad.py  ozon_requests.py  wb_requests.py  yandex_requests.py
core/: admin.py  enums.py  integrations.py  manager.py  models.py  query_selectors.py  serializers.py  tasks.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_account_platform_product_account_platform_and_more.py  0003_platform_platform_type.py  0004_product_manual_connection.py  0005_remove_platform_is_my_warehouse_and_more.py  0006_remove_account_auth_creds_and_more.py  0007_remove_account_auth_type.py  0010_alter_product_connection.py  (+4 more)
nginx/: nginx.conf
stock/: admin.py  enums.py  forms.py  integrations.py  models.py  moy_sklad.py  serializers.py  tasks.py  tasks_moy_sklad.py  urls.py  utils.py  views.py
ui/: Dockerfile  package-lock.json  package.json
unit_economics/: 1юзн  actions.py  admin.py  apps.py  integrations.py  models.py  periodic_tasks.py  serializers.py  signals.py  tasks_moy_sklad.py  tasks_ozon.py  tasks_wb.py  tasks_yandex.py  urls.py  views.py
(+56 files in other folders)
